# synfonia

./: CMakeLists.txt  README
devtools/: .gitignore  README  generateMSVC10x64.bat  generateMSVC10x86.bat  generateMSVC9x64.bat  generateMSVC9x86.bat  generateMinGW.bat  generateUnixMakefiles.sh  launchVisualStudio.bat
devtools/common/: generator.bat
devtools/config/: README  cache_variables_MSVC10x64.txt  cache_variables_MSVC10x86.txt  cache_variables_MSVC9x64.txt  cache_variables_MSVC9x86.txt  cache_variables_MinGW.txt  cache_variables_UnixMakefiles.txt
devtools/tools/: README
devtools/tools/gtest-cmake/: CMakeLists.txt  README  install.bat  install.sh
devtools/tools/gtest-cmake/devtools/: README  generateMSVC10x64.bat  generateMSVC10x86.bat  generateMSVC9x64.bat  generateMSVC9x86.bat  generateMinGW.bat  generateUnixMakefiles.sh
devtools/tools/gtest-cmake/src/: CMakeLists.txt
include/core/: clone.h  exception.h  float.h  hash_table.h  platform.h  smart_ptr.h
include/core/log/: appender.h  logger.h
src/core/: CMakeLists.txt  exception.cpp
src/core/log/: appender.cpp  logger.cpp
test/core/: CMakeLists.txt  clone_test.cpp  exception_test.cpp  float_test.cpp  logger_test.cpp  platform_test.cpp
